Skip to content

sound glitches seeking in files with mpga audio

IRC user reports:

(jya) I get weird sound glitches when I use the navigation bar. like when I jump from one place in the movie to another. I use headphones most of the time, becuase it is a laptop, and the sound quality is better with headphone but it really hurts my ears when those sound glitches happen lol. it goes like "BEEP!" or... "BAP!" when i try to navigate. and it's quite loud too lol.

(thedj) a codec/filter/mixer that doesn't properly null it's buffers when it needs to drop.

Confirmed issue in 0.8.4a but also with 20060306's win32 contrib (new ffmpeg) and svn

main debug: control type=5
mpeg_audio debug: emulated startcode (no startcode on following frame)
mpeg_audio debug: emulated startcode (no startcode on following frame)
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode (no startcode on following frame)
main debug: control type=5
mpeg_audio debug: emulated startcode (no startcode on following frame)
mpeg_audio debug: emulated startcode (no startcode on following frame)
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpgatofixed32 debug: libmad error: Huffman data overrun
main debug: control type=5
mpeg_audio debug: emulated startcode (no startcode on following frame)
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode
mpeg_audio debug: emulated startcode (no startcode on following frame)
mpeg_audio debug: emulated startcode (no startcode on following frame)
mpgatofixed32 debug: libmad error: bad main_data_begin pointer
main warning: buffer is 47273 in advance, triggering downsampling
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information