Added a b_discontinuity to aout_buffer_t for non-pcm streams. Set aout_buffer_t.b_discontinuity in mpeg audio packetizer. Silent first 3 frames on discontinuity in mad decoder. (close #590)